[metadata]
name = uroboros
version = attr: uroboros.version
author = Shoma Kokuryo
author_email = pudding@mail.poyo.info
description = Simple framework for building scalable CLI tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pddg/uroboros
license_file = LICENSE
classifier =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.5
entry_points = file: entry_points.cfg
packages = find:

[options.packages.find]
exclude =
  tests
  examples
